# gmock_demo

./: CMakeLists.txt  sonar.cc  sonar.h  test.cc
